# xiq

./: .gitignore  BresenhamLineDraw.h  CMakeLists.txt  Clamp.h  Class.h  Direction.h  Factory.cpp  Factory.h  Font.h  Game.cpp  GameTime.h  Input.h  Level.h  Main.md  Matrix.h  Object.h  ObjectBase.cpp  ObjectBase.h  Phase.Attract.cpp  Phase.Boot.cpp  Phase.GameOver.cpp  Phase.h  PhaseCommon.h  Player.cpp  Player.h  Playfield.cpp  Playfield.h  Precompiled.h  ProjectHome.md  README  Random.h  Readme.md  Styx.h  Traits.h  World.h  Xiq.cpp  Xiq.h  main.cpp  xiq.layout  xiq.sln  (+4 more)
Backup/: xiq.sln
Debug/: xiq.exp  xiq.lib
Include/: BresenhamLineDraw.h  Clamp.h  Class.h  ColorValue.h  Common.h  Direction.h  Draw.h  Factory.h  Font.h  Game.h  GameTime.h  Geometry.h  Impact.h  Input.h  Level.h  Matrix.h  Object.h  ObjectBase.h  Phase.h  PhaseCommon.h  Player.h  Playfield.h  Precompiled.h  Random.h  Sinusoid.h  Styx.h  Traits.h  World.h  Xiq.h
Source/: Draw.cpp  Factory.cpp  Font.cpp  Game.cpp  GameTime.cpp  Geometry.cpp  Impact.cpp  Input.cpp  Level.cpp  ObjectBase.cpp  Phase.Attract.cpp  Phase.Boot.cpp  Phase.GameOver.HighScore.cpp  Phase.GameOver.cpp  Phase.LevelChange.cpp  Phase.Play.cpp  Player.cpp  Playfield.cpp  Precompiled.cpp  Random.cpp  Styx.cpp  World.cpp  Xiq.cpp  main.cpp
VS2017/: .gitignore  Xiq.sln  Xiq.vcxproj
VS2019/: Xiq.vcxproj  Xiq.vcxproj.filters
src/: BresenhamLineDraw.h  Clamp.h  ColorValue.h  Common.h  Doxyfile  Draw.cpp  Draw.h  Factory.cpp  Font.cpp  Font.h  Game.cpp  Game.h  GameTime.cpp  GameTime.h  Geometry.cpp  Geometry.h  Impact.cpp  Phase.h  (+34 more)
(+69 files in other folders)
